# no_utils

./: .gitignore  Cargo.toml  README.md  license_notice_template_file.rs  license_notice_template_file.sh
utils/fortune_bot/: Cargo.toml  README.md
utils/fortune_bot/media/: Icon.xcf
utils/fortune_bot/src/: bot.rs  event.rs  main.rs
utils/fortune_bot/src/event/: fortune.rs  help.rs  license.rs  mod.rs
utils/noise/: Cargo.toml  README.md
utils/noise/src/: image.rs  main.rs  noise.rs
utils/onebrc/: Cargo.toml  README.md
utils/onebrc/scripts/: create_measurements.sh
utils/onebrc/scripts/dev/morling/onebrc/: CreateMeasurements.java
utils/onebrc/src/: main.rs
utils/rat/: Cargo.toml  README.md
utils/rat/src/: main.rs
